# dude

./: AGENTS.md  Cargo.toml  Dockerfile.test  README.md  build.sh  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
demo/: generate_demo.py
docs/: index.html
plugin/: dude.bash  dude.fish  dude.plugin.zsh
src/: audit.rs  claude.rs  commands.rs  config.rs  context.rs  corrections.rs  filter.rs  history.rs  main.rs  ollama.rs  profile.rs  safety.rs  session.rs  suggest.rs  tui.rs
