[package]
name = "dude"
version = "0.1.0"
edition = "2021"
description = "An agentic shell companion that learns your patterns"

[[bin]]
name = "dude"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = "z"
lto = true
strip = true
